<resources>
    <string name="app_name">GitHub-Speer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="github_search">GitHub Search</string>
    <string name="search_for_users">Search for Users</string>
    <string name="swipe_refresh">Swipe to refresh</string>
    <string name="looks_like_error">Empty Result.</string>
    <string name="search">Search</string>
    <string name="click_to_copy">Click To Copy URL.</string>
    <string name="click_to_see_followers">>> Click above to see followers and following.</string>
</resources>